DH server link added

--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,9 @@
 @keyframes spin{
     100%{transform: rotate(360deg);}
 }
+
+@media (max-width:600px) {
+    .restPageRating{
+        display: none !important;
+    }
+}
